Added media queries for website

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Speech - TTS</title>
+    <title>Text To Speech - TTS</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
         <h2>Text To Speech - <span>TTS</span></h2>
-        <textarea id="textarea" cols="30" rows="10" placeholder="Type anything here..."></textarea>
+        <textarea id="textarea" cols="30" rows="10" placeholder="Type here..."></textarea>
         <div class="control">
             <select id="voiceSelect"></select>
             <button class="btn"><img src="./images/play.png" alt="">Listen</button>
